# SDL2PlayerProject

./: CMakeLists.txt  README.md  main.c  player.c  player.h
